[FIXED] carousel height on mobile and mobile navbar padding

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -62,12 +62,14 @@ li:hover > button svg {
 .swiper-slide img {
   display: block;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   object-fit: cover;
+  object-position: center;
+  
 }
 
 @media screen and (max-width:700px) {
   .swiper{
-    height: 15vh;
+    height: 35vh;
   }
 }
